// Copyright 2015 The Serulian Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package proto;

message MemberSig {
   string MemberName = 1;
   uint64 MemberKind = 2;
   bool IsWritable = 3;
   bool IsExported = 4;
   string MemberType = 5;
   repeated string GenericConstraints = 6;
}